# nf

./: README.md  config.example.toml  go.mod  go.sum  test_exec  test_exec.go
backend/: README.md
backend/lambda/: main.go
cmd/nf/: main.go
features/: main_test.go  notification.feature  steps.go
internal/cmd/: config.go  daemon.go  internal_notify.go  root.go  setup_app.go
internal/notifier/: app.go  app_test.go  notifier.go  os.go  slack.go  teams.go
nf-python/: pyproject.toml
nf-python/src/nf/: command.py  main.py  notifier.py
nf-python/src/nf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nf-python/tests/features/: basic_notification.feature
nf-python/tests/steps/: test_cli.py
